// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> should render same with snapshot 1`] = `
.c0 {
  position: relative;
  height: 16px;
}

.c2 {
  height: 100%;
}

.c1 {
  position: absolute;
  bottom: 5px;
  left: 1px;
}

<div>
  <div
    class="c0"
  >
    <img
      class="c1"
    />
    <img
      class="c2"
    />
  </div>
</div>
`;

exports[`<Checkbox /> should render same with unchecked checkbox snapshot 1`] = `
.c0 {
  position: relative;
  height: 16px;
}

.c1 {
  height: 100%;
}

<div>
  <div
    class="c0"
  >
    <img
      class="c1"
    />
  </div>
</div>
`;
